hide all of the scrollbars, and turn on the mode-mouse of tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # reference https://bitbucket.org/xuxiaodong/dotman/src/cb7f1e6fb338/.tmux.conf
 
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 set -g display-time 3000
 set -g history-limit 65535
 set -g base-index 1
@@ -69,5 +69,6 @@ set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
 set -g mouse-utf8 on
+setw -g mode-mouse on
 
 
