Add vim-like copy & paste key for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -71,4 +71,8 @@ set -g mouse-select-window on
 set -g mouse-utf8 on
 setw -g mode-mouse on
 
-
+# vim-like copy & paste key bind
+unbind p
+bind p paste-buffer
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
