add clipboard support to tmux.

--- a/tmux.conf
+++ b/tmux.conf
@@ -76,3 +76,8 @@ unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
+
+# move x clipboard into tmux paste buffer
+bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+# move tmux copy buffer into x clipboard
+bind C-y run "tmux show-buffer | xclip -i -selection clipboard,primary"
