--- a/tmux.conf
+++ b/tmux.conf
@@ -25,6 +25,12 @@ bind j selectp -D
 bind h selectp -L
 bind l selectp -R
 
+# resize pane 
+bind ^j resize-pane -D 5
+bind ^k resize-pane -U 5
+bind ^h resize-pane -L 5
+bind ^l resize-pane -R 5
+
 # status bar
 
 set -g status-utf8 on
