--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # reference https://bitbucket.org/xuxiaodong/dotman/src/cb7f1e6fb338/.tmux.conf
 
-#set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 set -g display-time 3000
 set -g history-limit 65535
 set -g base-index 1
@@ -42,6 +42,32 @@ setw -g mode-keys vi
 set -g status-right "#[fg=green]#(cut -d ' ' -f 1-3 /proc/loadavg)#[default]"
 set -g status-right-attr bright
 
+# code from http://www.tofu.org/drupal/node/182
+#--Status-Bar-------------------------------------------------------------------
+# Default colors
+set -g status-bg black
+set -g status-fg white
+ 
+# Left side of status bar
+set -g status-left-length 20
+set -g status-left '#[fg=green][#[bg=black,fg=cyan]#S#[bg=black,fg=blue,dim]:#H#[fg=green]]'
+ 
+# Inactive windows in status bar
+set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[default]#W#[fg=grey,dim]#F'
+ 
+# Current or active window in status bar
+#set-window-option -g window-status-current-bg yellow
+#set-window-option -g window-status-current-fg black
+set-window-option -g window-status-current-format '#[bg=blue,fg=cyan,bold]#I#[bg=blue,fg=cyan]:#[fg=white]#W#[fg=dim]#F'
+ 
+# Alerted window in status bar. Windows which have an alert (bell, activity or content).
+set-window-option -g window-status-alert-fg red
+set-window-option -g window-status-alert-bg white
+ 
+# Right side of status bar
+#set -g status-right '#[fg=yellow]#(date)'
+set -g status-right '#[fg=green][#[fg=white]#T#[fg=green]][#[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=green]]'
+ 
 # color scheme
 # see also: https://github.com/seebi/tmux-colors-solarized
 set -g status-bg colour235 #base02
