unset screen-256color and add whoami to status line.
because the old linux distributions do not support screen-256color,
so we had to disable it.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # reference https://bitbucket.org/xuxiaodong/dotman/src/cb7f1e6fb338/.tmux.conf
 
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 set -g display-time 3000
 set -g history-limit 65535
 set -g base-index 1
@@ -66,7 +66,7 @@ set-window-option -g window-status-alert-bg white
  
 # Right side of status bar
 #set -g status-right '#[fg=yellow]#(date)'
-set -g status-right '#[fg=green][#[fg=white]#T#[fg=green]][#[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=green]]'
+set -g status-right '#[fg=green][#[fg=white]#(whoami)#[fg=green]][#[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]#[fg=green]]'
  
 # color scheme
 # see also: https://github.com/seebi/tmux-colors-solarized
