--- a/tmux.conf
+++ b/tmux.conf
@@ -107,3 +107,7 @@ bind-key -t vi-copy 'y' copy-selection
 bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
 # move tmux copy buffer into x clipboard
 bind C-y run "tmux show-buffer | xclip -i"
+
+# Set window notifications
+setw -g monitor-activity on
+set -g visual-activity on
