add a more usable clipboard, and remap the key bind.

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,11 +7,17 @@ set -g base-index 1
 set -g pane-base-index 1
 set -s escape-time 0
 
+# ---------------------------------------------------------------------------
 # key bindings
+# ---------------------------------------------------------------------------
 
-set -g prefix ^w
-unbind ^b
-bind w send-prefix
+# the first key prefix, the emacs-like key prefix,
+# to avoid the conflict with my vi key binds.
+set -g prefix C-x
+unbind C-b
+
+# the second key prefix
+set -g prefix2 M-x
 
 unbind '"'
 unbind s
@@ -26,12 +32,25 @@ bind h selectp -L
 bind l selectp -R
 
 # resize pane 
-bind ^j resize-pane -D 5
-bind ^k resize-pane -U 5
-bind ^h resize-pane -L 5
-bind ^l resize-pane -R 5
+bind C-j resize-pane -D 5
+bind C-k resize-pane -U 5
+bind C-h resize-pane -L 5
+bind C-l resize-pane -R 5
 
-# status bar
+# windows management
+unbind n
+unbind p
+bind C-n next-window
+bind C-p previous-window
+
+# session management
+bind C-s list-sessions
+
+
+
+# ---------------------------------------------------------------------------
+# status bars
+# ---------------------------------------------------------------------------
 
 set -g status-utf8 on
 set -g status-interval 1
@@ -97,17 +116,34 @@ set -g mouse-select-window on
 set -g mouse-utf8 on
 setw -g mode-mouse on
 
+# ---------------------------------------------------------------------------
 # vim-like copy & paste key bind
+# ---------------------------------------------------------------------------
 unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
 # move x clipboard into tmux paste buffer
-bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
+#bind M-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
 # move tmux copy buffer into x clipboard
-bind C-y run "tmux show-buffer | xclip -i"
+#bind M-y run "tmux show-buffer | xclip -i"
 
+# C-c: save into system clipboard (+). With preselection.
+bind C-c choose-buffer "run \"tmux save-buffer -b %% - | xclip -i -sel clipboard\" \; run \" tmux display \\\"Clipboard \(+\) filled with: $(tmux save-buffer -b %1 - | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \\\" \" "
+# C-v: copy from + clipboard.
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(+\) $(xclip -o -sel clipboard | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
+
+# C-d: save into selection clipboard (*). With preselection.
+bind C-d choose-buffer "run \"tmux save-buffer -b %% - | xclip -i\" \; run \" tmux display \\\"Clipboard \(*\) filled with: $(tmux save-buffer -b %1 - | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \\\" \" "
+# C-f: copy from * clipboard.
+bind C-f run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(*\) $(xclip -o | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
+
+# ---------------------------------------------------------------------------
 # Set window notifications
+# ---------------------------------------------------------------------------
 setw -g monitor-activity on
 set -g visual-activity on
+
+
+
