bind C-x send-prefix -- sending prefix to other program.

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,6 +14,8 @@ set -s escape-time 0
 # the first key prefix, the emacs-like key prefix,
 # to avoid the conflict with my vi key binds.
 set -g prefix C-x
+# sending prefix to other program
+bind C-x send-prefix
 unbind C-b
 
 # the second key prefix
