add pipe-pane key bind.

--- a/tmux.conf
+++ b/tmux.conf
@@ -147,5 +147,9 @@ bind C-f run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" \; run "tmux d
 setw -g monitor-activity on
 set -g visual-activity on
 
+# ---------------------------------------------------------------------------
+# key binds from <<Progmatic tmux>>
+# ---------------------------------------------------------------------------
+bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
 
