add option to set default shell.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,7 @@
 # reference https://bitbucket.org/xuxiaodong/dotman/src/cb7f1e6fb338/.tmux.conf
 
+# set default shell to (zsh/bash etc)
+set -g default-shell /bin/bash
 #set -g default-terminal "screen-256color"
 set -g display-time 3000
 set -g history-limit 65535
