--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 
 # set default shell to (zsh/bash etc)
 set -g default-shell /bin/bash
-#set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 set -g display-time 3000
 set -g history-limit 65535
 set -g base-index 1
@@ -66,6 +66,8 @@ set -g status-right "#[fg=green]#(cut -d ' ' -f 1-3 /proc/loadavg)#[default]"
 set -g status-right-attr bright
 
 # code from http://www.tofu.org/drupal/node/182
+set-option -g allow-rename off
+
 #--Status-Bar-------------------------------------------------------------------
 # Default colors
 set -g status-bg black
@@ -76,12 +78,12 @@ set -g status-left-length 40
 set -g status-left '#[fg=green][#[bg=black,fg=cyan]#S#[bg=black,fg=blue,dim]:#H#[fg=green]]'
  
 # Inactive windows in status bar
-set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[default]#W#[fg=grey,dim]#F'
+#set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[default]#W#[fg=grey,dim]#F'
  
 # Current or active window in status bar
 #set-window-option -g window-status-current-bg yellow
 #set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-format '#[bg=blue,fg=cyan,bold]#I#[bg=blue,fg=cyan]:#[fg=white]#W#[fg=dim]#F'
+#set-window-option -g window-status-current-format '#[bg=blue,fg=cyan,bold]#I#[bg=blue,fg=cyan]:#[fg=white]#W#[fg=dim]#F'
  
 # Alerted window in status bar. Windows which have an alert (bell, activity or content).
 set-window-option -g window-status-alert-fg red
@@ -128,21 +130,6 @@ bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 bind-key -t vi-copy 'y' copy-selection
 
-# move x clipboard into tmux paste buffer
-#bind M-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
-# move tmux copy buffer into x clipboard
-#bind M-y run "tmux show-buffer | xclip -i"
-
-# C-c: save into system clipboard (+). With preselection.
-bind C-c choose-buffer "run \"tmux save-buffer -b %% - | xclip -i -sel clipboard\" \; run \" tmux display \\\"Clipboard \(+\) filled with: $(tmux save-buffer -b %1 - | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \\\" \" "
-# C-v: copy from + clipboard.
-bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(+\) $(xclip -o -sel clipboard | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
-
-# C-d: save into selection clipboard (*). With preselection.
-bind C-d choose-buffer "run \"tmux save-buffer -b %% - | xclip -i\" \; run \" tmux display \\\"Clipboard \(*\) filled with: $(tmux save-buffer -b %1 - | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \\\" \" "
-# C-f: copy from * clipboard.
-bind C-f run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer" \; run "tmux display \"Copied from \(*\) $(xclip -o | dd ibs=1 obs=1 status=noxfer count=80 2> /dev/null)... \""
-
 # ---------------------------------------------------------------------------
 # Set window notifications
 # ---------------------------------------------------------------------------
@@ -154,4 +141,16 @@ set -g visual-activity on
 # ---------------------------------------------------------------------------
 bind P pipe-pane -o "cat >>~/#W.log" \; display "Toggled logging to ~/#W.log"
 
+# ---------------------------------------------------------------------------
+# key binds for browsing URLs
+# ---------------------------------------------------------------------------
+bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; run-shell "$TERMINAL -e urlview /tmp/tmux-buffer"
+
+
+# ---------------------------------------------------------------------------
+# key binds for X clipboard integration
+# ---------------------------------------------------------------------------
+# Vim style
+bind-key -t vi-copy w copy-pipe "xsel -i -p -b"
+bind-key m run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
