--- a/tmux.conf
+++ b/tmux.conf
@@ -127,8 +127,8 @@ setw -g mode-mouse on
 # ---------------------------------------------------------------------------
 unbind p
 bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -Tcopy-mode-vi 'v' send -X begin-selection
+bind-key -Tcopy-mode-vi 'y' send -X copy-selection
 
 # ---------------------------------------------------------------------------
 # Set window notifications
@@ -151,6 +151,5 @@ bind-key u capture-pane \; save-buffer /tmp/tmux-buffer \; run-shell "$TERMINAL 
 # key binds for X clipboard integration
 # ---------------------------------------------------------------------------
 # Vim style
-bind-key -t vi-copy w copy-pipe "xsel -i -p -b"
+bind-key -Tcopy-mode-vi  'w' send -X copy-pipe "xsel -i -p -b"
 bind-key m run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
-
